--- a/src/components/Currency/Currency.module.css
+++ b/src/components/Currency/Currency.module.css
@@ -1,23 +1,23 @@
-.group{
-    background: #161616;
-    width: 180px;
-    margin: 0 auto 20px;
-    display: grid;
-    grid-template-columns: 120px 80px;
-    border-radius: 15px;
+.group {
+  background: #161616;
+  width: 180px;
+  margin: 0 auto 20px;
+  display: grid;
+  grid-template-columns: 120px 80px;
+  border-radius: 15px;
 }
-input,select{
-    background-color: #ddd;
-    border:0;
-    border-radius: 30px;
-    color:#1E3319;
+input,
+select {
+  background-color: #ddd;
+  border: 0;
+  border-radius: 30px;
+  color: #1e3319;
 }
-input{
-    padding-left: 10px;
-    width: 100px;
-    margin-right: 50px;
-
+input {
+  padding-left: 10px;
+  width: 100px;
+  margin-right: 50px;
 }
-select{
-    padding: 15px;
+select {
+  padding: 15px;
 }
